--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,4 @@
+# Created by Nihar - GitLab CI/CD for Rynz Deployment to Cloudflare Pages
 image: python:3.8
 
 stages:
@@ -20,6 +21,9 @@ build:
   stage: build
   script:
     - rynz deploy
+  artifacts:
+    paths:
+      - public/
 
 test:
   stage: test
@@ -29,13 +33,16 @@ test:
         echo "Tests failed! ❌ Build stopped.";
         exit 1;
       fi
+  artifacts:
+    paths:
+      - test_output.txt
 
 deploy:
   stage: deploy
   only:
     - main
   script:
-    - echo $CLOUDFLARE_API_TOKEN
-    - echo $CLOUDFLARE_ACCOUNT_ID
-#    - curl -X POST "https://api.cloudflare.com/client/v4/accounts/${CLOUDFLARE_ACCOUNT_ID}/pages/projects/rynz/deployments" \
-#      -H "Authorization: Bearer ${CLOUDFLARE_API_TOKEN}"
+    - curl -X POST "https://api.cloudflare.com/client/v4/accounts/${CLOUDFLARE_ACCOUNT_ID}/pages/projects/rynz/deployments" \
+      -H "Authorization: Bearer ${CLOUDFLARE_API_TOKEN}"
+  dependencies:
+    - build # Ensures deploy stage has access to the artifacts
